[package]
name = "jvmti"
version = "0.5.0"
authors = [ "Alex Pecsi <xea@blacklight.so>", "Fabian Faßbender <fabian.fassbender42@gmail.com>" ]
description = "JVM Monitoring and profiling agent"
keywords = [ "java", "jvm", "jvmti", "debugger" ]

[lib]
crate_type = [ "rlib" ]

[dependencies]
libc = "0.2.*"
time = "0.2.*"
lazy_static = "1.4.*"
serde = "1.0.*"
serde_derive = "1.0.*"

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = true